# sqCAD

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml
docs/source/: conf.py  index.rst  install.rst
docs/source/tutorials/: 01_design_a_cpw.ipynb  02_fit_an_LC.ipynb  03_compare_to_simulations.ipynb  index.rst  tutorial_00_installation.rst
src/sqcad/: __init__.py  models.py
